# last_min_newsRAG-APP

./: .gitignore  README.md  pathway_extracted.py  pyproject.toml  requirments.txt
notebook/: pathway.ipynb
