[project]
name = "last-min-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "bokeh>=3.4",
    "httpx>=0.27",
    "numpy>=2.0",
    "openai>=1.60,<2.0",
    "pandas>=2.0",
    "panel>=1.4",
    "pathway[xpack-llm]==0.28.0",
    "pdf2image>=1.17.0",
    "pyarrow>=15.0",
    "python-dotenv==1.2.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    "scikit-learn>=1.5",
    "tqdm>=4.66",
    "unstructured>=0.18.27",
]
